# adam-nsh

./: .gitignore  SPECIFICATION.md
ai/: .gitignore  agent.py  data.py  main.py  pyproject.toml
ai/ingest/: ingest_ais_2024_01_01.py
app/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js
app/app/: globals.css  layout.tsx  page.tsx
app/app/api/vessels/: route.ts
app/components/chat/: Chat.tsx
app/components/chat/messages/: MessageBubble.tsx
app/components/map/: Map.tsx  MapStyleIndicator.tsx  VesselMarker.tsx
app/components/ui/: ClassificationBanner.tsx
app/lib/: mapUtils.ts
app/lib/adapters/: ais.ts  camera.ts  index.ts  satellite.ts  types.ts
app/lib/api/: vessels.ts
app/lib/data/: sampleVessels.ts
app/lib/map/: mapbox.ts
app/lib/server/: mapbox.ts
